--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,6 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
     </head>
     <body>
         <form name="formulario" action="controlador.jsp" method="post">
@@ -21,4 +20,7 @@ and open the template in the editor.
             <input type="submit" name="validar" value="Aceptar">
         </form>
     </body>
+    <footer>
+        
+    </footer>
 </html>
